GNOME Bugzilla – Bug 706231
MonitorXrandr: fix setting gamma ramps
Last modified: 2013-08-18 10:59:24 UTC
The value passed to XRRCrtcSetGamma must be allocated with XRRAllocGamma (because it relies on the locations of green and blue), otherwise garbage is sent on the wire.
Created attachment 252096 [details] [review] MonitorXrandr: fix setting gamma ramps
Review of attachment 252096 [details] [review]: OK.
Attachment 252096 [details] pushed as 015c05f - MonitorXrandr: fix setting gamma ramps